# zwidgetv2

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: align.hpp.6CF876E0E7B55A11.idx  application.hpp.48BD7A330657140A.idx  basic_cast.hpp.77ED569A89B8C34E.idx  button.hpp.837621689061B8E2.idx  canvas.hpp.F1E56F4747129F1C.idx  checkbox.hpp.17091CBF87C3E8BC.idx  color.hpp.9803889D2AD72C6D.idx  combobox.hpp.F43AFBD7677C3C49.idx  container.hpp.106DC444F6EBB19F.idx  event.hpp.65874B306A595499.idx  event_dispatcher.hpp.24DB6939D633EA09.idx  event_translater.hpp.053D93E24FBAEB30.idx  event_translator.hpp.2D59791B1D417C21.idx  keyboard.hpp.488C2BA94C00FF17.idx  keymod.hpp.7EF9733EC8110F86.idx  label.hpp.5EB1B141475ADAB9.idx  main.cpp.DFD3AD582A64E99C.idx  mouse.hpp.B928466F26F346E3.idx  numeric.hpp.1E13E9D123C5A546.idx  panel.hpp.6F7089E2F538857A.idx  point.hpp.0C352553F0C8A0F8.idx  rect.hpp.E16A9B2CF3E6BA61.idx  renderer.hpp.07E1181C2F2CDA8A.idx  rendering_test.cpp.5037110D1A4B288A.idx  size.hpp.A36834ED9AD01453.idx  slider.hpp.B28FA634E43E31F5.idx  test_all_widget.cpp.8740B618D7D95B34.idx  test_comprehensive_widgets.cpp.19906925C9E919C2.idx  test_keyboard.cpp.12F89E233A6F1A94.idx  test_multi_window.cpp.42E5EB558BC62304.idx  test_widget.cpp.A1AE9111EE32F887.idx  textbox.hpp.43F18FD777506F30.idx  variant.hpp.4B83BD8C80B4D084.idx  widget.hpp.E1027897BEF60825.idx  (+3 more)
include/zwidget/: zwidget.hpp
src/: main.cpp  test_all_widget.cpp  test_basic_shape.cpp  test_comprehensive_widgets.cpp  test_keyboard.cpp  test_multi_window.cpp  test_rendering.cpp  test_widget.cpp
(+29 files in other folders)
